all changes and fix for non-available data
